--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
       <a class="link" href="https://github.com/AndrewTheTM" target="_blank">
         <i class="fab fa-github">&nbsp;</i>Github
       </a>
-      <!--
-      <a class="link" href="https://www.linkedin.com/in/johnggli" target="_blank">
+      <a class="link" href="https://www.linkedin.com/in/andrewrohne/" target="_blank">
         <i class="fab fa-linkedin">&nbsp;</i>Linkedin
       </a>
+      <!--
       <a class="link" href="https://www.facebook.com/johnggli" target="_blank">
         <i class="fab fa-facebook">&nbsp;</i>Facebook
       </a>
