--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- End of Parallax Pixel Background Animation -->
 
     <a id="profilePicture" href="#popup">
-      <img src="https://avatars0.githubusercontent.com/u/43749971" alt="Profile Picture">
+      <img src="https://github.com/andrewthetm.png" alt="Profile Picture">
     </a>
 
     <div class="overlay" id="popup">
@@ -32,11 +32,6 @@
             <img src="https://avatars0.githubusercontent.com/u/43749971" alt="Profile Picture">
           </a>
         </div>
-        <div class="popup-quote">
-          But... the sensation that I've lost something lingers for a longtime after I wake up.
-        </div>
-        <a class="popup-close" onclick="history.back()">&times;</a>
-      </div>
     </div>
 
     <div id="userName">
