--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
     <div class="overlay" id="popup">
       <div class="popup">
         <div class="popup-photo">
+          <a href="https://github.com/andrewthetm.png" target="_blank">
             <img src="https://github.com/andrewthetm.png" alt="Profile Picture">
+          </a>
         </div>
+      </div>
     </div>
 
     <div id="userName">
@@ -46,13 +49,19 @@
       <!--
       <a class="link" href="https://www.facebook.com/johnggli" target="_blank">
         <i class="fab fa-facebook">&nbsp;</i>Facebook
+      </a>-->
+      <a class="link" href="https://www.instagram.com/hambrew807" target="_blank">
+        <i class="fab fa-instagram">&nbsp;</i>Instagram 🍻🏃♂️🎸
       </a>
-      <a class="link" href="https://www.instagram.com/johnggli" target="_blank">
-        <i class="fab fa-instagram">&nbsp;</i>Instagram
-      </a>
-      <a class="link" href="https://twitter.com/johnggli" target="_blank">
-        <i class="fab fa-twitter">&nbsp;</i>Twitter
-      </a> -->
+      <a class="link" href="https://twitter.com/AndrewTheTM" target="_blank">
+        <i class="fab fa-twitter">&nbsp;</i>Twitter (professional)
+      </a> 
+      <a class="link" href="https://twitter.com/Hambrew807" target="_blank">
+        <i class="fab fa-twitter">&nbsp;</i>Twitter 🍻🏃♂️🎸
+      </a> 
+      <a class="link" href="https://twitter.com/ke8p" target="_blank">
+        <i class="fab fa-twitter">&nbsp;</i>Twitter 📻
+      </a> 
     </div>
   </body>
 </html>
