Upd with more links2

--- a/index.html
+++ b/index.html
@@ -46,22 +46,27 @@
       <a class="link" href="https://www.linkedin.com/in/andrewrohne/" target="_blank">
         <i class="fab fa-linkedin">&nbsp;</i>Linkedin
       </a>
-      <!--
-      <a class="link" href="https://www.facebook.com/johnggli" target="_blank">
-        <i class="fab fa-facebook">&nbsp;</i>Facebook
-      </a>-->
       <a class="link" href="https://www.instagram.com/hambrew807" target="_blank">
-        <i class="fab fa-instagram">&nbsp;</i>Instagram 🍻🏃♂️🎸
+        <i class="fab fa-instagram">&nbsp;</i>Instagram 🍻🏃️🎸
       </a>
       <a class="link" href="https://twitter.com/AndrewTheTM" target="_blank">
         <i class="fab fa-twitter">&nbsp;</i>Twitter (professional)
       </a> 
       <a class="link" href="https://twitter.com/Hambrew807" target="_blank">
-        <i class="fab fa-twitter">&nbsp;</i>Twitter 🍻🏃♂️🎸
+        <i class="fab fa-twitter">&nbsp;</i>Twitter 🍻🏃️🎸
       </a> 
       <a class="link" href="https://twitter.com/ke8p" target="_blank">
         <i class="fab fa-twitter">&nbsp;</i>Twitter 📻
       </a> 
+      <a class="link" href="https://youtube.com/@runningonbeer" target="_blank">
+        <i class="fab fa-youtube">&nbsp;</i>Youtube 🍻
+      </a>
+      <a class="link" href="https://www.youtube.com/@andrewrohne" target="_blank">
+        <i class="fab fa-youtube">&nbsp;</i>Youtube 🎸
+      </a>
+      <a class="link" href="#" target="_blank">
+        <i class="fab fa-rebel">&nbsp;</i>These are not the droids you are looking for
+      </a>
     </div>
   </body>
 </html>
