Re-added quote and used as a bio.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
             <img src="https://github.com/andrewthetm.png" alt="Profile Picture">
           </a>
         </div>
+        <div class="popup-quote">
+          The answer is 42. Now if only we could figure out what the question was.
+          
+          I am a transportation data analytics consultant for about 40 hours per week. All other times I do fun stuff like brew beer, play bass, go running, and occasionally play with electronics and radio waves.
+        </div>
+        <a class="popup-close" onclick="history.back()">&times;</a>
       </div>
     </div>
 
@@ -63,6 +69,18 @@
       </a>
       <a class="link" href="https://www.youtube.com/@andrewrohne" target="_blank">
         <i class="fab fa-youtube">&nbsp;</i>Youtube 🎸
+      </a>
+      <a class="link" href="https://www.siliconcreek.net" target="_blank">
+        <i class="fab fa-wordpress">&nbsp;</i>Semi Wannabe Professional Blog
+      </a>
+      <a class="link" href="https://www.runningonbeer.net" target="_blank">
+        <i class="fab fa-wordpress">&nbsp;</i>Homebrewing Blog
+      </a>
+      <a class="link" href="https://www.runningonbeer.blog" target="_blank">
+        <i class="fab fa-wordpress">&nbsp;</i>Running Blog
+      </a>
+      <a class="link" href="https://www.ke8p.us" target="_blank">
+        <i class="fab fa-wordpress">&nbsp;</i>Amateur Radio Blog
       </a>
       <a class="link" href="#" target="_blank">
         <i class="fab fa-rebel">&nbsp;</i>These are not the droids you are looking for
