Upd readme, made into two columns

--- a/index.html
+++ b/index.html
@@ -33,8 +33,6 @@
           </a>
         </div>
         <div class="popup-quote">
-          The answer is 42. Now if only we could figure out what the question was.
-          
           I am a transportation data analytics consultant for about 40 hours per week. All other times I do fun stuff like brew beer, play bass, go running, and occasionally play with electronics and radio waves.
         </div>
         <a class="popup-close" onclick="history.back()">&times;</a>
@@ -46,45 +44,53 @@
     </div>
 
     <div id="links">
-      <a class="link" href="https://github.com/AndrewTheTM" target="_blank">
-        <i class="fab fa-github">&nbsp;</i>Github
-      </a>
-      <a class="link" href="https://www.linkedin.com/in/andrewrohne/" target="_blank">
-        <i class="fab fa-linkedin">&nbsp;</i>Linkedin
-      </a>
-      <a class="link" href="https://www.instagram.com/hambrew807" target="_blank">
-        <i class="fab fa-instagram">&nbsp;</i>Instagram 🍻🏃️🎸
-      </a>
-      <a class="link" href="https://twitter.com/AndrewTheTM" target="_blank">
-        <i class="fab fa-twitter">&nbsp;</i>Twitter (professional)
-      </a> 
-      <a class="link" href="https://twitter.com/Hambrew807" target="_blank">
-        <i class="fab fa-twitter">&nbsp;</i>Twitter 🍻🏃️🎸
-      </a> 
-      <a class="link" href="https://twitter.com/ke8p" target="_blank">
-        <i class="fab fa-twitter">&nbsp;</i>Twitter 📻
-      </a> 
-      <a class="link" href="https://youtube.com/@runningonbeer" target="_blank">
-        <i class="fab fa-youtube">&nbsp;</i>Youtube 🍻
-      </a>
-      <a class="link" href="https://www.youtube.com/@andrewrohne" target="_blank">
-        <i class="fab fa-youtube">&nbsp;</i>Youtube 🎸
-      </a>
-      <a class="link" href="https://www.siliconcreek.net" target="_blank">
-        <i class="fab fa-wordpress">&nbsp;</i>Semi Wannabe Professional Blog
-      </a>
-      <a class="link" href="https://www.runningonbeer.net" target="_blank">
-        <i class="fab fa-wordpress">&nbsp;</i>Homebrewing Blog
-      </a>
-      <a class="link" href="https://www.runningonbeer.blog" target="_blank">
-        <i class="fab fa-wordpress">&nbsp;</i>Running Blog
-      </a>
-      <a class="link" href="https://www.ke8p.us" target="_blank">
-        <i class="fab fa-wordpress">&nbsp;</i>Amateur Radio Blog
-      </a>
+        <div style="display: flow-root;">
+            <div style="float: left; width: 50%">
+              <a class="link" href="https://github.com/AndrewTheTM" target="_blank">
+                <i class="fab fa-github">&nbsp;</i>Github
+              </a>
+              <a class="link" href="https://www.linkedin.com/in/andrewrohne/" target="_blank">
+                <i class="fab fa-linkedin">&nbsp;</i>Linkedin
+              </a>
+              <a class="link" href="https://twitter.com/AndrewTheTM" target="_blank">
+                <i class="fab fa-twitter">&nbsp;</i>Twitter (professional)
+              </a> 
+              <a class="link" href="https://www.siliconcreek.net" target="_blank">
+                <i class="fab fa-wordpress">&nbsp;</i>Professional Blog
+              </a>
+              <a class="link" href="https://www.runningonbeer.blog" target="_blank">
+                <i class="fab fa-wordpress">&nbsp;</i>Running Blog
+              </a>
+              <a class="link" href="https://www.ke8p.us" target="_blank">
+                <i class="fab fa-wordpress">&nbsp;</i>Amateur Radio Blog
+              </a>
+             </div>
+             <div style="float:right; width: 50%">
+              <a class="link" href="https://www.instagram.com/hambrew807" target="_blank">
+                <i class="fab fa-instagram">&nbsp;</i>Instagram 🍻🏃️🎸
+              </a>
+              <a class="link" href="https://twitter.com/Hambrew807" target="_blank">
+                <i class="fab fa-twitter">&nbsp;</i>Twitter 🍻🏃️🎸
+              </a> 
+              <a class="link" href="https://twitter.com/ke8p" target="_blank">
+                <i class="fab fa-twitter">&nbsp;</i>Twitter 📻
+              </a> 
+              <a class="link" href="https://youtube.com/@runningonbeer" target="_blank">
+                <i class="fab fa-youtube">&nbsp;</i>Youtube 🍻
+              </a>
+              <a class="link" href="https://www.youtube.com/@andrewrohne" target="_blank">
+                <i class="fab fa-youtube">&nbsp;</i>Youtube 🎸
+              </a>
+              <a class="link" href="https://www.runningonbeer.net" target="_blank">
+                <i class="fab fa-wordpress">&nbsp;</i>Homebrewing Blog
+              </a>
+            </div>  
+          </div>
+        <div >
       <a class="link" href="#" target="_blank">
         <i class="fab fa-rebel">&nbsp;</i>These are not the droids you are looking for
       </a>
+      </div>
     </div>
   </body>
 </html>
